--- a/Gygax/Resources/DataTemplateDictionary.xaml
+++ b/Gygax/Resources/DataTemplateDictionary.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:gygaxCore="clr-namespace:GygaxCore;assembly=GygaxCore"
+                    xmlns:gygaxCore="clr-namespace:GygaxCore.DataStructures;assembly=GygaxCore"
                     xmlns:controls="clr-namespace:GygaxVisu.Controls"
                     xmlns:devices="clr-namespace:GygaxCore.Devices;assembly=GygaxCore"
                     xmlns:ifc="clr-namespace:GygaxCore.Ifc;assembly=GygaxCore"
-                    xmlns:visualizer="clr-namespace:GygaxVisu.Visualizer">
+                    >
 
     <DataTemplate DataType="{x:Type gygaxCore:Image}">
         <controls:ImageControl />
@@ -18,6 +18,9 @@
     <DataTemplate DataType="{x:Type gygaxCore:Video}">
         <controls:ImageControl />
     </DataTemplate>
+    <DataTemplate DataType="{x:Type gygaxCore:Processor}">
+        <controls:ImageControl />
+    </DataTemplate>
     <DataTemplate DataType="{x:Type gygaxCore:Pointcloud}">
         <controls:Control3D />
     </DataTemplate>
@@ -27,13 +30,13 @@
     <DataTemplate DataType="{x:Type gygaxCore:VsfmReconstruction}">
         <controls:Control3D />
     </DataTemplate>
-    <DataTemplate DataType="{x:Type gygaxCore:SceneScannerPositionReader}">
+    <DataTemplate DataType="{x:Type gygaxCore:SceneScannerPositionLoader}">
         <controls:Control3D />
     </DataTemplate>
-    <DataTemplate DataType="{x:Type gygaxCore:Processor}">
-        <controls:ImageControl />
-    </DataTemplate>
     <DataTemplate DataType="{x:Type ifc:IfcViewerWrapper}">
+        <controls:Control3D />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type gygaxCore:Streamable}">
         <controls:Control3D />
     </DataTemplate>
 
