Reconstruction updated to the latest version

--- a/GygaxVisu/Controls/Control3D.xaml
+++ b/GygaxVisu/Controls/Control3D.xaml
@@ -19,6 +19,7 @@
             CoordinateSystemLabelForeground="White"
             UseDefaultGestures="True"
             Visibility="Hidden"
+            MouseDown="Viewport_OnMouseDown"
             >
         </hx:Viewport3DX>
     </Grid>
