--- a/GygaxVisu/Controls/ImageControl.xaml
+++ b/GygaxVisu/Controls/ImageControl.xaml
@@ -9,7 +9,7 @@
              >
     <Grid>
         <Border x:Name="RecordingFrame" BorderThickness="0" BorderBrush="Red">
-        <Image Source="{Binding Path=ImageSource, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Stretch="Uniform"/>
+            <Image x:Name="ImageCtrl" Source="{Binding Path=ImageSource, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Stretch="Uniform" MouseDown="UIElement_OnMouseDown" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
         </Border>
     </Grid>
 </UserControl>
