Added obj reader and writer Added pointcloud writer Changed context menu

--- a/GygaxVisu/Controls/Control3D.xaml
+++ b/GygaxVisu/Controls/Control3D.xaml
@@ -21,5 +21,6 @@
             Visibility="Hidden"
             >
         </hx:Viewport3DX>
+        <Label Grid.Row="0"  HorizontalContentAlignment="Stretch" x:Name="Label" Content="{Binding Path=Name, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Visibility="Collapsed"/>
     </Grid>
 </UserControl>
